
Changes in JMurmel-1.4.5 relative to JMurmel-1.4.4

 * changed (fixed?) the commandline parameter --eval: environment is no longer reset before REPL
   so that e.g.
     jmurmel --repl --eval (load \"mlib\")
   will work as expected
 * added the primitives lisp-implementation-type and lisp-implementation-version
 * (declaim (optimize (debug 0))) omits "loc =..." in compiled code

 * mlib: added dotted-nthcdr, ldiff, tailp, butlast, nbutlast, adjoin, pushnew

 * fixed interpreted "(let () (values 1 2 3) 10)"
 * fixed control flow & multiple values, e.g. "(if (values 1 2 3) 'yes) ; ==> yes"
 * fixed symbol names that contain a ';' such as |;abc|
 * fixed mlib: in "dotimes" the loopvariable now is bound in the resultform
   even if the countform was an int literal <= 0


Changes in JMurmel-1.4.4 relative to JMurmel-1.4.3
released: 2023-12-10

 * changed *command-line-argument-list* in compiled Murmel to a regular mutable list
 * changed load and require in compiled Murmel: must appear at toplevel
 * changed/fixed car to accept all strings
 * changed read-textfile and read-textfile-lines to use UTF-8 as the default charset
   (unless the charset was given as an argument)
 * changed read-textfile to no longer append a #\Newline at the end
 * changed "dynamic": dynamic is no longer a self evaluating symbol,
   it's syntactic meaning remains unchanged

 * added *random-state*
 * added the commandline parameter --eval

 * fixed read-from-string: handle feature-expressions correctly, intern symbols correctly
 * fixed compiled random-state-p and make-random-state
 * fixed passing *command-line-argument-list between interpreter <=> compiled Murmel
 * fixed compiled presized "make-hash-table"
 * fixed mlib: key-var and value-var now are bound to nil in the result form in "doplist"
   (was: not bound)
 * fixed miscompilation when using gensymmed local function names in "labels"


Changes in JMurmel-1.4.3 relative to JMurmel-1.4.2
released: 20.5.2023
