@@ -7,6 +7,7 @@ Changes in JMurmel-1.4.5 relative to JMurmel-1.4.4
    will work as expected
  * added the primitives lisp-implementation-type and lisp-implementation-version
  * (declaim (optimize (debug 0))) omits "loc =..." in compiled code
+ * changed the reader to treat non-ascii whitespace as whitespace, too
 
  * mlib: added dotted-nthcdr, ldiff, tailp, butlast, nbutlast, adjoin, pushnew
 
